RESOLVED FIXED176848
[HarfBuzz] Wrong offset returned by HarfBuzzShaper::offsetForPosition in some cases
https://bugs.webkit.org/show_bug.cgi?id=176848
Summary [HarfBuzz] Wrong offset returned by HarfBuzzShaper::offsetForPosition in some...
Carlos Garcia Campos
Reported 2017-09-13 09:40:34 PDT
This bug has been revealed after enabling complex text by default in GTK and WPE ports in r221909.
Attachments
Patch (1.01 MB, patch)
2017-09-13 09:45 PDT, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2017-09-13 09:45:52 PDT
Created attachment 320647 [details] Patch It doesn't fix all the failures after r221909, but many of them and produces results similar to the mac ones in others. I still need to investigate the weird space issues.
Michael Catanzaro
Comment 2 2017-09-13 09:56:28 PDT
Comment on attachment 320647 [details] Patch r=me because this is the path to a better future, but this exacerbates our complex text selection rendering glitch, bug #148220. You can see that some of the expected results are now worse than before. E.g. editing/selection/select-across-readonly-input-4 shows the issue clearly.
Michael Catanzaro
Comment 3 2017-09-13 10:15:02 PDT
(In reply to Michael Catanzaro from comment #2) > Comment on attachment 320647 [details] > Patch > > r=me because this is the path to a better future, but this exacerbates our > complex text selection rendering glitch, bug #148220. To be clear, I mean r221909 has exacerbated bug #148220. Not this patch. I assume this patch is fine, but I don't know because I don't understand it. I'm just approving it because we have no font reviewers.
Carlos Garcia Campos
Comment 4 2017-09-13 10:15:06 PDT
Myles C. Maxfield
Comment 5 2017-09-13 16:54:54 PDT
Michael Catanzaro
Comment 6 2017-09-13 20:55:20 PDT
(In reply to Myles C. Maxfield from comment #5) > At some point we should do https://bugs.webkit.org/show_bug.cgi?id=167566. I'd be excited to share as much code as possible, but I fear we don't have anyone who can help with this. :/
Radar WebKit Bug Importer
Comment 7 2017-09-27 13:00:33 PDT
Note You need to log in before you can comment on or make changes to this bug.